fix z-index overlay

--- a/src/css/blocks/_basket.css
+++ b/src/css/blocks/_basket.css
@@ -147,6 +147,7 @@ justify-content: flex-end;
 	left: 0;
 	width: 100%;
 	height: 100%;
+	z-index: 9;
 }
 
 /* scrollbar */
